clean: TemplateResourceConverter data as constructor argument